tests/dev_server/errors/stories/js_classic_throw/main.js
// above: comment
// above: to
// above: increase line numbers
/* before */ throw new Error("here"); /* after */
// below: comment
// below: to
// below: increase line numbers
